syntax = "proto3";

import "google/protobuf/empty.proto";

package order_items;

service OrderItemService {
  rpc updateOrderItem(UpdateOrderItemRequest) returns (google.protobuf.Empty);
}

message UpdateOrderItemRequest {
  int32 order_item_id = 1; // ID of the order item to update
  int32 quantity_to_pick = 2; // Updated quantity to pick
}
